@@ -1,3 +1,7 @@
+2002-07-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* gas/ppc/altivec.d: Invoke "as" with "-a32".
+
 2002-07-19  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gas/mmix/list-pseudoints.l: Adjust for changes in gas section
